<perspectives xmlns:ymir="http://schemas.android.com/apk/res-auto">
    <!-- Perspectivas iniciais (lista/detalhe).
         As perspectivas padrão são:
            Lista e Lista/Detalhes: br.com.zalem.ymir.client.android.entity.ui.perspective.EntityListDetailPerspective
            Apenas Detalhes: br.com.zalem.ymir.client.android.entity.ui.perspective.EntityDetailPerspective
    -->

    <perspective ymir:title="@string/expense_list_perspective_title"
        ymir:className="br.com.zalem.ymir.sample.offline.perspective.ExpenseListDetailPerspective"
        ymir:theme="@style/ThemeOverlay.Sample.Light.Perspective.Expense"
        ymir:launchMode="single" >
        <intent-filter>
            <action ymir:name="br.com.zalem.ymir.client.android.entity.ui.perspective.LIST_DETAIL" />
            <action ymir:name="br.com.zalem.ymir.client.android.entity.ui.perspective.LIST" />
            <category ymir:name="Expense" />
        </intent-filter>
        <argument ymir:key="ENABLE_FAB_ADD" />
    </perspective>
    <perspective ymir:title="@string/expense_list_perspective_title"
        ymir:className="br.com.zalem.ymir.client.android.entity.ui.perspective.EntityDetailPerspective"
        ymir:theme="@style/ThemeOverlay.Sample.Light.Perspective.Expense" >
        <intent-filter>
            <action ymir:name="br.com.zalem.ymir.client.android.entity.ui.perspective.DETAIL" />
            <category ymir:name="Expense" />
        </intent-filter>
    </perspective>

    <perspective ymir:title="@string/product_list_perspective_title"
        ymir:className="br.com.zalem.ymir.client.android.entity.ui.perspective.EntityListDetailPerspective"
        ymir:theme="@style/ThemeOverlay.Sample.Light.Perspective.Product"
        ymir:launchMode="single" >
        <intent-filter>
        	<action ymir:name="br.com.zalem.ymir.client.android.entity.ui.perspective.LIST_DETAIL" />
        	<action ymir:name="br.com.zalem.ymir.client.android.entity.ui.perspective.LIST" />
        	<category ymir:name="Product" />
        </intent-filter>
        <argument ymir:key="DISABLE_EDIT_ON_CLICK" />
        <argument ymir:key="ENABLE_FAB_ADD" />
    </perspective>

    <perspective ymir:title="@string/place_list_perspective_title"
        ymir:className="br.com.zalem.ymir.sample.offline.perspective.PlaceListDetailPerspective"
        ymir:theme="@style/ThemeOverlay.Sample.Light.Perspective.Place"
        ymir:launchMode="single" >
        <intent-filter>
            <action ymir:name="br.com.zalem.ymir.client.android.entity.ui.perspective.LIST_DETAIL" />
            <action ymir:name="br.com.zalem.ymir.client.android.entity.ui.perspective.LIST" />
            <category ymir:name="Place" />
        </intent-filter>
        <argument ymir:key="DISABLE_EDIT_ON_CLICK" />
        <argument ymir:key="ENABLE_FAB_ADD" />
    </perspective>


    <!-- Perspectivas de edição
         A perspectiva padrão é: br.com.zalem.ymir.client.android.entity.ui.perspective.EntityEditingPerspective
     -->

    <perspective ymir:title="@string/expense_editing_perspective_title"
        ymir:className="br.com.zalem.ymir.client.android.entity.ui.perspective.EntityEditingPerspective"
        ymir:theme="@style/ThemeOverlay.Sample.Light.Perspective.Expense">
        <intent-filter>
            <action ymir:name="br.com.zalem.ymir.client.android.entity.ui.perspective.EDITING" />
            <category ymir:name="Expense" />
        </intent-filter>
    </perspective>

    <perspective ymir:title="@string/place_editing_perspective_title"
        ymir:className="br.com.zalem.ymir.client.android.entity.ui.perspective.EntityEditingPerspective"
        ymir:theme="@style/ThemeOverlay.Sample.Light.Perspective.Place">
        <intent-filter>
            <action ymir:name="br.com.zalem.ymir.client.android.entity.ui.perspective.EDITING" />
            <category ymir:name="Place" />
        </intent-filter>
    </perspective>

	<perspective ymir:title="@string/product_editing_perspective_title"
        ymir:className="br.com.zalem.ymir.client.android.entity.ui.perspective.EntityEditingPerspective"
        ymir:theme="@style/ThemeOverlay.Sample.Light.Perspective.Product">
        <intent-filter>
        	<action ymir:name="br.com.zalem.ymir.client.android.entity.ui.perspective.EDITING" />
        	<category ymir:name="Product" />
        </intent-filter>
    </perspective>

	
	<!-- Perspectivas de seleção
	     A perspectiva padrão é: br.com.zalem.ymir.client.android.entity.ui.perspective.EntitySelectionPerspective
	-->

    <perspective ymir:title="@string/place_selection_perspective_title"
        ymir:className="br.com.zalem.ymir.client.android.entity.ui.perspective.EntitySelectionPerspective">
        <intent-filter>
            <action ymir:name="br.com.zalem.ymir.client.android.entity.ui.perspective.SELECTION" />
            <category ymir:name="Place" />
        </intent-filter>
        <argument ymir:key="ENABLE_FAB_SELECT" />
    </perspective>

    <perspective ymir:title="@string/product_selection_perspective_title"
        ymir:className="br.com.zalem.ymir.client.android.entity.ui.perspective.EntitySelectionPerspective">
        <intent-filter>
            <action ymir:name="br.com.zalem.ymir.client.android.entity.ui.perspective.SELECTION" />
            <category ymir:name="Product" />
        </intent-filter>
        <argument ymir:key="ENABLE_FAB_SELECT" />
    </perspective>
</perspectives>